5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4379/executions/1832_1651.log
== TEST (2019-06-13 18:15:26) 
-- CODE:
from numpy import*
mt=int(input("digite acor: "))
qc=int(input("digite a quantida: "))
mc=0
c=0
cm=0
em=0
e=0
me=0
print(mt)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:15:53) 
-- CODE:
from numpy import*
mt=int(input("digite acor: "))
qc=int(input("digite a quantida: "))
mc=0
c=0
cm=0
em=0
e=0
me=0
print(mt)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:17:24) 
-- CODE:
from numpy import*
mt=array(eval(int(input("digite acor: ")))
qc=int(input("digite a quantida: "))
mc=0
c=0
cm=0
em=0
e=0
me=0
print(mt)

-- ERROR:
File "XXXX", line 3
    qc=int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:17:24) 
-- CODE:
from numpy import*
mt=array(eval(int(input("digite acor: ")))
qc=int(input("digite a quantida: "))
mc=0
c=0
cm=0
em=0
e=0
me=0
print(mt)

-- EXECUTION TIME:
0.675413
-- ERROR:
  File "/home/codebench/codes/1832/1651/main.py", line 3
    qc=int(input())
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:17:26) 
-- CODE:
from numpy import*
mt=array(eval(int(input("digite acor: ")))
qc=int(input("digite a quantida: "))
mc=0
c=0
cm=0
em=0
e=0
me=0
print(mt)

-- EXECUTION TIME:
1.1113
-- ERROR:
  File "/home/codebench/codes/1832/1651/main.py", line 3
    qc=int(input("digite a quantida: "))
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:17:27) 
-- CODE:
from numpy import*
mt=array(eval(int(input("digite acor: ")))
qc=int(input("digite a quantida: "))
mc=0
c=0
cm=0
em=0
e=0
me=0
print(mt)

-- EXECUTION TIME:
1.06224
-- ERROR:
  File "/home/codebench/codes/1832/1651/main.py", line 3
    qc=int(input())
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:18:04) 
-- CODE:
from numpy import*
mt=array(eval(input("digite acor: ")))
qc=array(eval(input("digite a quantida: ")))
mc=0
c=0
cm=0
em=0
e=0
me=0
print(mt)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:18:42) 
-- CODE:
from numpy import*
mt=array(eval(input("digite acor: ")))
q=array(eval(input("digite a quantida: ")))
mc=0
c=0
cm=0
em=0
e=0
me=0
print(mt)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
